sources/sitter/tree-sitter-zo/grammar.js
    source_file: $ => repeat($._item),

    // ===== Items (Top Level Constructs) =====

    _item: $ => seq(
      optional($.attributes),
      optional($.visibility),
      $._item_content,
    ),

    visibility: $ => 'pub',

    // ===== Pack Declaration =====

    pack_declaration: $ => seq(
      'pack',
      field('name', $.identifier),
      optional($.pack_body),
    ),

    pack_body: $ => seq('{', repeat($._item), '}'),

    // ===== Load Declaration =====

    load_declaration: $ => seq(
      'load',
      field('path', $.module_path),
      optional(seq('::', '(', $.import_list, ')')),
      ';',
    ),

    module_path: $ => seq(
      $.identifier,
      repeat(prec.right(1, seq('::', $.identifier))),
    ),

    import_list: $ => seq(
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(','),
    ),

    // ===== Directive =====

    type_declaration: $ => seq(
      'type',
      field('name', $.identifier),
      '=',
      field('type', $._type),
    ),

    // ===== Group Type Declaration =====

    ext_declaration: $ => seq(
      'ext',
      field('name', $.identifier),
      '(',
      optional($.parameter_list),
      ')',
      '->',
      field('return_type', $._type),
      ';',
    ),

    // ===== Abstract Declaration =====

    abstract_declaration: $ => seq(
      'abstract',
      field('name', $.identifier),
      '{',
      repeat($.abstract_method),
      '}',
    ),

    abstract_method: $ => seq(
      'fun',
      field('name', $.identifier),
      '(',
      optional($.parameter_list),
      ')',
      optional(seq('->', field('return_type', $._type))),
      ';',
    ),

    // ===== Apply Declaration =====

    apply_declaration: $ => seq(
      'apply',
      field('trait', $.identifier),
      optional(seq('for', field('type', $.identifier))),
      '{',
      repeat($._apply_content),
      '}',
    ),

    _apply_content: $ => choice(
      $.function_declaration,
      $.state_declaration,
    ),

    // ===== State Declaration (for typestates) =====

    function_declaration: $ => seq(
      optional('raw'),
      choice('fun', 'fn'),
      field('name', $.identifier),
      optional($.generic_parameters),
      '(',
      optional($.parameter_list),
      ')',
      optional(seq(
        '->',
        field('return_type', $._type),
        optional(seq('->>', '(', $.identifier, ')')),
      )),
      field('body', $.block),
    ),

    generic_parameters: $ => seq(
      '<',
      $.generic_parameter,
      repeat(seq(',', $.generic_parameter)),
      optional(','),
      '>',
    ),

    generic_parameter: $ => seq('$', $.identifier),

    parameter_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(','),
    ),

    parameter: $ => seq(
      field('name', choice($.identifier, 'self')),
      ':',
      field('type', $._type),
    ),

    // ===== Value Declaration =====

    val_declaration: $ => seq(
      'val',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      '=',
      field('value', $._expression),
      ';',
    ),

    // ===== Struct Declaration =====

    struct_declaration: $ => seq(
      optional($.typestate_attribute),
      'struct',
      field('name', $.identifier),
      optional($.generic_parameters),
      '{',
      optional($.field_list),
      '}',
    ),

    field_list: $ => seq(
      $.field,
      repeat(seq(',', $.field)),
      optional(','),
    ),

    field: $ => seq(
      optional($.visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    // ===== Enum Declaration =====

    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      optional($.generic_parameters),
      '{',
      $.enum_variant_list,
      '}',
    ),

    enum_variant_list: $ => seq(
      $.enum_variant,
      repeat(seq(',', $.enum_variant)),
      optional(','),
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq('(', field('type', $._type), ')')),
      optional(seq('=', field('value', $.integer_literal))),
    ),

    // ===== Statements =====

    _statement: $ => choice(
      $.imu_statement,
      $.mut_statement,
      $.assignment_statement,
      $.loop_statement,
      $.while_statement,
      $.for_statement,
      $.nursery_statement,
      $.if_statement,
      $.block,
      $.directive,
      $.expression_statement,
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      optional(field('value', $._expression)),
      '}',
    ),

    // ===== Expressions =====

    _expression: $ => choice(
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.cast_expression,
      $.postfix_expression,
      $.primary_expression,
    ),

    binary_expression: $ => choice(
      prec.left(PREC.OR, seq(field('left', $._expression), '||', field('right', $._expression))),
      prec.left(PREC.AND, seq(field('left', $._expression), '&&', field('right', $._expression))),
      prec.left(PREC.EQ, seq(field('left', $._expression), choice('==', '!='), field('right', $._expression))),
      prec.left(PREC.CMP, seq(field('left', $._expression), choice('<', '>', '<=', '>='), field('right', $._expression))),
      prec.left(PREC.BIT_OR, seq(field('left', $._expression), '|', field('right', $._expression))),
      prec.left(PREC.BIT_XOR, seq(field('left', $._expression), '^', field('right', $._expression))),
      prec.left(PREC.BIT_AND, seq(field('left', $._expression), '&', field('right', $._expression))),
      prec.left(PREC.SHIFT, seq(field('left', $._expression), choice('<<', '>>'), field('right', $._expression))),
      prec.left(PREC.ADD, seq(field('left', $._expression), choice('+', '-'), field('right', $._expression))),
      prec.left(PREC.MUL, seq(field('left', $._expression), choice('*', '/', '%'), field('right', $._expression))),
      // Pipe operator
      prec.left(PREC.POSTFIX, seq(field('left', $._expression), '|>', field('right', $._expression))),
      // Range operators
      prec.left(PREC.CMP, seq(field('left', $._expression), '..', field('right', $._expression))),
      prec.left(PREC.CMP, seq(field('left', $._expression), '..=', field('right', $._expression))),
    ),

    primary_expression: $ => choice(
      $._literal,
      $.identifier,
      $.path_expression,
      $.self,
      $.parenthesized_expression,
      $.array_expression,
      $.tuple_expression,
      $.struct_expression,
      $.closure_expression,
      $.if_expression,
      $.match_expression,
      $.loop_expression,
      $.while_expression,
      $.for_expression,
      $.block,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
      $.ellipsis,
    ),

    _type: $ => choice(
      $.primitive_type,
      $.path_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.generic_type,
      $.reference_type,
      $.template_type,
      $.self_type,
    ),

    primitive_type: $ => choice(
      'int', 's8', 's16', 's32', 's64',
      'uint', 'u8', 'u16', 'u32', 'u64',
      'float', 'f32', 'f64',
      'bool', 'bytes', 'char', 'str',
    ),

    generic_type: $ => seq('$', $.identifier),

    reference_type: $ => seq(
      '&',
      optional('mut'),
      $._type,
    ),

    self_type: $ => 'Self',

    // ===== Paths =====

    _literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.bytes_literal,
      $.char_literal,
      $.string_literal,
      $.raw_string_literal,
    ),

    integer_literal: $ => choice(
      $.decimal_literal,
      $.binary_literal,
      $.octal_literal,
      $.hex_literal,
      $.base_literal,
    ),

    decimal_literal: $ => /[0-9][0-9_]*/,

    float_literal: $ => choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // ===== Comments =====

    line_comment: $ => token(seq('--', /.*/)),

    // Block comments are handled by external scanner (src/scanner.c)
    // to support nested comments: -* outer -* inner *- outer *-
  },
});
